--- a/index.html
+++ b/index.html
@@ -1,96 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>Haitian Quotes</title>
-   <meta charset="UTF-8">
-    <title>Inivè Kreyòl-Pataje pwovèb lakay</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Chewy|Josefin+Sans|Josefin+Slab|Kumar+One|Lemonada" rel="stylesheet">
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
-  
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
-<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Chewy|Josefin+Sans|Josefin+Slab|Kumar+One|Lemonada'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
-  
-    <div id="main_container" class="container-fluid">
-        <header>
-            <h1>
-                <p>
-                    Haitian Creole Quotes
-                </p>
-            </h1>
-            <div id="mini-titre">
-                <p>
-                   Tweet an Haitan Quote!!
-                </p>
-            </div>
-        </header>
-        <div id="quote-box" class="container">
-            <div id="quote">
-                <p>
-                </p>
-            </div>
-            <div id="all-buttons" class="row">
-                <div id="share-quote-buttons" class="col-md-4 col-sx-4">
-                    <a href="#" id="share-twitterlink" target="_blank">
-         <button id="share-twitter" class="btn btn-lg btn-primary">
-          <span class="fa fa-twitter">
-          </span>
-        </button>
-        </a>
-                </div>
-                <div id="select-proverb-button" class="col-sm-12 col-md-4">
-                    <button class="btn btn-lg btn-primary" id="chwazipwoveb" data-toggle="modal" data-target="#myModal">CHOOSE A QUOTE</button>
-                </div>
-                <div class="col-sm-12 col-md-4 col-sx-4">
-                    <button id="new-quote-button" class="btn btn-lg btn-primary">NEW QUOTE</button>
-                </div>
-            </div>
-        </div>
-
-</div>
-    <!-- Modal -->
-    <div class="row">
-        <div id="myModal" class="modal fade col-sm-12" role="dialog">
-            <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">QUOTE LIST</h4>
-                    </div>
-                    <div class="modal-body">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-     
-
-    <script  src="js/index.js"></script>
-
-
-
-
-</body>
-
-</html>
+<h1>AIS Marine Traffic</h1>
+<div style="width: 100%; height: 660px; overflow: hidden">
+<div style="position: relative; top: -20px">
+<script type="text/javascript">
+    var width="100%";
+    var height="860px"; 
+    var latitude="40";
+    var longitude="5";
+    var zoom="4";
+</script><script type="text/javascript" src="https://www.vesselfinder.com/aismap.js">
