--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     var latitude="40";
     var longitude="5";
     var zoom="4";
-</script><script type="text/javascript" src="https://www.vesselfinder.com/aismap.js">
+</script>
+    <script type="text/javascript" src="https://www.vesselfinder.com/aismap.js">
